sandbox/sandbox-rag-generator/k8s/rag-generator-frontend-angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-generator-frontend-angular
  namespace: ganatan-dev
  labels:
    app: rag-generator-frontend-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-generator-frontend-angular
  template:
    metadata:
      labels:
        app: rag-generator-frontend-angular
    spec:
      containers:
        - name: rag-generator-frontend-angular
          image: registry.gitlab.com/ganatan/sandbox/rag-generator-frontend-angular:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: rag-generator-frontend-angular-service
  namespace: ganatan-dev
  labels:
    app: rag-generator-frontend-angular
spec:
  selector:
    app: rag-generator-frontend-angular
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rag-generator-frontend-angular-route
  namespace: ganatan-dev
  labels:
    app: rag-generator-frontend-angular
spec:
  to:
    kind: Service
    name: rag-generator-frontend-angular-service
  port:
    targetPort: 4000
  tls:
    termination: edge
